[project]
name = "blockchainpype"
version = "0.2.2"
description = "A Python library for interacting with multiple blockchain networks."
authors = [
    { name = "Gianluca Pagliara", email = "pagliara.gianluca@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "financepype>=0.2.0,<1",
    "web3>=7.6.1,<8",
    "solders>=0.23.0,<1",
    "solana>=0.36.3,<1",
    "eth-account>=0.13.5,<1",
    "mnemonic>=0.21,<1",
    "aiohttp>=3.9.0,<4",
    "python-dotenv>=1.2.1,<2",
]

[project.urls]
Homepage = "https://github.com/gianlucapagliara/blockchainpype"
Repository = "https://github.com/gianlucapagliara/blockchainpype"
Documentation = "https://gianlucapagliara.github.io/blockchainpype/"
"Bug Tracker" = "https://github.com/gianlucapagliara/blockchainpype/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.25",
    "pytest-timeout>=2.3",
    "mypy>=1.7.0",
    "ruff>=0.8.4",
    "pre-commit>=4.0",
]
docs = ["mkdocs>=1.6"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
strict = true
disallow_untyped_decorators = false
ignore_missing_imports = true
disable_error_code = ["misc"]
exclude = ["tests/.*"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 30
testpaths = ["tests"]
markers = [
    "network: tests that require network access (RPC calls)",
    "integration: tests that require external services (Hardhat, etc.)",
]
